// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Build 1`] = `<DocumentFragment />`;

exports[`Disband 1`] = `<DocumentFragment />`;

exports[`Hold 1`] = `<DocumentFragment />`;

exports[`Move with target 1`] = `<DocumentFragment />`;

exports[`Move without target 1`] = `
<DocumentFragment>
  <div>
    Select a territory to move into.
  </div>
</DocumentFragment>
`;

exports[`Support with aux 1`] = `
<DocumentFragment>
  <div>
    Select a territory to support into.
  </div>
</DocumentFragment>
`;

exports[`Support with target 1`] = `<DocumentFragment />`;

exports[`Support without aux 1`] = `
<DocumentFragment>
  <div>
    Select a territory to support from.
  </div>
</DocumentFragment>
`;
